--- a/index.html
+++ b/index.html
@@ -11,56 +11,73 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <header>
-      <nav>
-        <!--LOGO-->
-        <a class="logo link" href="./index.html"
-          >WEB<span class="logo-studio-header">Studio</span></a
-        >
-
-        <!--navigation menu-->
-
-        <ul class="list">
-          <li><a class="list-font link" href="./index.html">Studio</a></li>
-          <li>
-            <a class="list-font link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="list-font link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-
-      <!--Contact-->
-      <address class="adress-list">
-        <ul class="list">
-          <li>
-            <a class="link-font link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+    <header class="header">
+      <div class="container section header-div">
+        <nav class="menu-list">
+          <!--LOGO-->
+          <div class="logo-div">
+            <a class="logo link" href="./index.html"
+              >WEB<span class="logo-studio-header">Studio</span></a
             >
-          </li>
-          <li>
-            <a class="link-font link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+          </div>
+
+          <!--navigation menu-->
+          <div class="menu-div">
+            <ul class="list menu-list">
+              <li><a class="list-font link" href="./index.html">Studio</a></li>
+              <li>
+                <a class="list-font link" href="./portfolio.html">Portfolio</a>
+              </li>
+              <li><a class="list-font link" href="">Contacts</a></li>
+            </ul>
+          </div>
+        </nav>
+
+        <!--Contact-->
+        <address class="adress-list">
+          <div class="adress-div">
+          <ul class="list contact-list">
+            <li>
+              <a class="link-font link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link-font link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+          </div>
+        </address>
+      </div>
     </header>
     <main>
       <!-- hero image -->
+
       <section class="section-hero">
-        <div class="container">
+        <div class="container section">
           <h1 class="fontshone">Effective Solutions<br />for Your Business</h1>
-          <button class="buttons" type="button">Order Service</button>
+          <div class="button-div">
+            <button class="buttons" type="button">Order Service</button>
+          </div>
         </div>
       </section>
 
       <!-- Section 1-->
       <section class="section-what-we-use">
-        <div>
+        <div class="container section">
           <h2 class="fontshtwo">What we use</h2>
-          <ul class="list">
+          <ul class="list section1-div">
             <li class="li-what-we-use">
               <h3 class="fontshthre">Strategy</h3>
               <p class="p-font">
@@ -95,91 +112,97 @@
 
       <!-- Section 2-->
       <section>
-        <h2 class="fontshtwo">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/oldmc.jpg"
-              alt="Old mac"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/samrtphone.jpg"
-              alt="Smartphone with diffrent screens"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/smartandlap.jpg"
-              alt="Laptop nnd smartphone"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="container section">
+          <h2 class="fontshtwo">What are we doing</h2>
+          <ul class="list section1-div">
+            <li>
+              <img
+                src="./images/oldmc.jpg"
+                alt="Old mac"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/samrtphone.jpg"
+                alt="Smartphone with diffrent screens"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/smartandlap.jpg"
+                alt="Laptop nnd smartphone"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Section 3-->
       <section class="section-team">
-        <h2 class="fontshtwo">Our Team</h2>
-        <ul class="list">
-          <li class="li-section-team">
-            <img
-              src="./images/mark.jpg"
-              alt="smiling dark-haired man with beard and mustache in blue shirt"
-              width="264"
-              height="260"
-            />
-            <h3 class="fontshthre">Mark Guerrero</h3>
-            <p class="p-font">Product Designer</p>
-          </li>
-          <li class="li-section-team">
-            <img
-              src="./images/tom.jpg"
-              alt="smiling brunette in a blue shirt"
-              width="264"
-              height="260"
-            />
-            <h3 class="fontshthre">Tom Ford</h3>
-            <p class="p-font">Frontend Developer</p>
-          </li>
-          <li class="li-section-team">
-            <img
-              src="./images/camila.jpg"
-              alt="brunette with long hair falling to her shoulders in a pink sweater"
-              width="264"
-              height="260"
-            />
-            <h3 class="fontshthre">Camila Garcia</h3>
-            <p class="p-font">Marketing</p>
-          </li>
-          <li class="li-section-team">
-            <img
-              src="./images/daniel.jpg"
-              alt="a dark-haired man with facial hair in a gray T-shirt"
-              width="264"
-              height="260"
-            />
-            <h3 class="fontshthre">Daniel Wilson</h3>
-            <p class="p-font">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container section">
+          <h2 class="fontshtwo">Our Team</h2>
+          <ul class="list">
+            <li class="li-section-team">
+              <img
+                src="./images/mark.jpg"
+                alt="smiling dark-haired man with beard and mustache in blue shirt"
+                width="264"
+                height="260"
+              />
+              <h3 class="fontshthre">Mark Guerrero</h3>
+              <p class="p-font">Product Designer</p>
+            </li>
+            <li class="li-section-team">
+              <img
+                src="./images/tom.jpg"
+                alt="smiling brunette in a blue shirt"
+                width="264"
+                height="260"
+              />
+              <h3 class="fontshthre">Tom Ford</h3>
+              <p class="p-font">Frontend Developer</p>
+            </li>
+            <li class="li-section-team">
+              <img
+                src="./images/camila.jpg"
+                alt="brunette with long hair falling to her shoulders in a pink sweater"
+                width="264"
+                height="260"
+              />
+              <h3 class="fontshthre">Camila Garcia</h3>
+              <p class="p-font">Marketing</p>
+            </li>
+            <li class="li-section-team">
+              <img
+                src="./images/daniel.jpg"
+                alt="a dark-haired man with facial hair in a gray T-shirt"
+                width="264"
+                height="260"
+              />
+              <h3 class="fontshthre">Daniel Wilson</h3>
+              <p class="p-font">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="fooster-parameters">
-      <!--LOGO-->
-      <a class="logo link" href="./index.html"
-        >WEB<span class="logo-studio-fooster">Studio</span></a
-      >
-      <p class="p-font-fooster">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container section">
+        <!--LOGO-->
+        <a class="logo link" href="./index.html"
+          >WEB<span class="logo-studio-fooster">Studio</span></a
+        >
+        <p class="p-font-fooster">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
