ndext.hrtml finisj

--- a/index.html
+++ b/index.html
@@ -76,32 +76,32 @@
       <!-- Section 1-->
       <section class="section-what-we-use">
         <div class="container section">
-          <h2 class="fontshtwo">What we use</h2>
+          <h2 class="visually-hidden">What we use</h2>
           <ul class="list section1-div">
             <li class="li-what-we-use">
               <h3 class="fontshthre">Strategy</h3>
-              <p class="p-font">
+              <p class="p-font-doing">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="li-what-we-use">
               <h3 class="fontshthre">Punctuality</h3>
-              <p class="p-font">
+              <p class="p-font-doing">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="li-what-we-use">
               <h3 class="fontshthre">Diligence</h3>
-              <p class="p-font">
+              <p class="p-font-doing">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="li-what-we-use">
               <h3 class="fontshthre">Technologies</h3>
-              <p class="p-font">
+              <p class="p-fontdoing">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -112,7 +112,7 @@
 
       <!-- Section 2-->
       <section>
-        <div class="container section">
+        <div class="container section ">
           <h2 class="fontshtwo">What are we doing</h2>
           <ul class="list section1-div">
             <li>
@@ -147,7 +147,9 @@
       <section class="section-team">
         <div class="container section">
           <h2 class="fontshtwo">Our Team</h2>
+          <div class="secion3-div">
           <ul class="list">
+            <div class="secion3-div">
             <li class="li-section-team">
               <img
                 src="./images/mark.jpg"
@@ -155,6 +157,7 @@
                 width="264"
                 height="260"
               />
+              
               <h3 class="fontshthre">Mark Guerrero</h3>
               <p class="p-font">Product Designer</p>
             </li>
@@ -188,7 +191,9 @@
               <h3 class="fontshthre">Daniel Wilson</h3>
               <p class="p-font">UI Designer</p>
             </li>
+            </div>
           </ul>
+          
         </div>
       </section>
     </main>
@@ -199,8 +204,8 @@
           >WEB<span class="logo-studio-fooster">Studio</span></a
         >
         <p class="p-font-fooster">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
+          Increase the flow of customers and<br/> sales for your business with digital<br/>
+        marketing & growth solutions.
         </p>
       </div>
     </footer>
