--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     />
   </head>
   <body>
-       <header class="header">
+    <header class="header">
       <div class="container section header-div">
         <nav class="menu-list">
           <!--LOGO-->
@@ -45,18 +45,18 @@
         <!--Contact-->
         <address class="adress-list">
           <div class="adress-div">
-          <ul class="list contact-list">
-            <li>
-              <a class="link-font link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="link-font link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
+            <ul class="list contact-list">
+              <li>
+                <a class="link-font link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="link-font link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
           </div>
         </address>
       </div>
@@ -77,6 +77,7 @@
         </ul>
 
         <ul class="list">
+          <div class="wrap_div">
           <li>
             <a class="link" href="">
               <img
@@ -188,18 +189,22 @@
               <p class="p-font">Web Site</p>
             </a>
           </li>
+          </div>
         </ul>
       </section>
     </main>
     <footer class="fooster-parameters">
-      <!--LOGO-->
-      <a class="logo link" href="./index.html"
-        >WEB<span class="logo-studio-fooster">Studio</span></a
-      >
-      <p class="p-font-fooster">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container section">
+        <!--LOGO-->
+        <a class="logo link" href="./index.html"
+          >WEB<span class="logo-studio-fooster">Studio</span></a
+        >
+        <p class="p-font-fooster">
+          Increase the flow of customers and<br />
+          sales for your business with digital<br />
+          marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
