--- a/portfolio.html
+++ b/portfolio.html
@@ -63,134 +63,141 @@
     </header>
     <main>
       <section class="portfolio-filters">
-        <h1 class="fontshone">Images</h1>
-        <ul class="list">
-          <li><button class="filters-buttons" type="button">All</button></li>
-          <li>
-            <button class="filters-buttons" type="button">Web Site</button>
-          </li>
-          <li><button class="filters-buttons" type="button">App</button></li>
-          <li><button class="filters-buttons" type="button">Design</button></li>
-          <li>
-            <button class="filters-buttons" type="button">Marketing</button>
-          </li>
-        </ul>
-
-        <ul class="list">
-          <div class="wrap_div">
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/pagesbankapp.jpg"
-                alt="Application pages view for logging in to the bank and managing your bank account. 
-                The dominant colors are purple and white. Purple at the top of the page, white at the bottom"
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre">Banking App Interface Concept</h2>
-              <p class="p-font">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/PhoneReadQRcode.jpg"
-                alt="Smartphone held in fingers and reading QR code with smartphone."
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre">Cashless Payment</h2>
-              <p class="p-font">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Computerandsmartphonewithdesamefoto.jpg"
-                alt="On the laptop screen and on the smartphone screen there is the same 
-              colorful image with the words - return to normalcy."
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre">Meditation App</h2>
-              <p class="p-font">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/cocpitincar.jpg"
-                alt="Cockpit in the car. Smartphone in the holder with staking turned on."
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre">Taxi Service</h2>
-              <p class="p-font">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/destopwithnun.jpg"
-                alt="Five images with desktop proposals with a moon theme"
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre">Screen Illustrations</h2>
-              <p class="p-font">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/Womeninorangedress.jpg"
-                alt="A woman in a yellow sweater, gray hat and glasses looks at the smartphone"
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre">Online Courses</h2>
-              <p class="p-font">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/leaflet.jpg"
-                alt="Description of home control presented by a woman in a white turtleneck. Control options via smartphone and touch screen are shown."
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre">Instagram Stories Concept</h2>
-              <p class="p-font">Design</p>
-            </a>
-          </li>
-
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/womenwithbag.jpg"
-                alt="A woman dressed in gray pants, a gray long sweater and a white blouse carries fruits and vegetables in a white mesh bag."
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre">Organic Food</h2>
-              <p class="p-font">Web Site</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/cafeewitchmilk.jpg"
-                alt="The barista pours milk to create a pattern on the surface of the coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="fontshthre">Fresh Coffee</h2>
-              <p class="p-font">Web Site</p>
-            </a>
-          </li>
+        <div class="container section-portfolio-div">
+          <h1 class="fontshone visually-hidden">Images</h1>
+          <div class="filters-div">
+          <ul class="list filters-ul-div">
+            <li><button class="filters-buttons" type="button">All</button></li>
+            <li>
+              <button class="filters-buttons" type="button">Web Site</button>
+            </li>
+            <li><button class="filters-buttons" type="button">App</button></li>
+            <li>
+              <button class="filters-buttons" type="button">Design</button>
+            </li>
+            <li>
+              <button class="filters-buttons" type="button">Marketing</button>
+            </li>
+          </ul>
           </div>
-        </ul>
+          <div class="portfolio-card-div">
+          <ul class="list">
+            <div class="card-wrap-div">
+              <li>
+                <a class="link" href="">
+                  <img
+                    src="./images/pagesbankapp.jpg"
+                    alt="Application pages view for logging in to the bank and managing your bank account. 
+                The dominant colors are purple and white. Purple at the top of the page, white at the bottom"
+                    width="360"
+                    height="300"
+                  />
+                  <h2 class="fontshthre">Banking App Interface Concept</h2>
+                  <p class="p-font">App</p>
+                </a>
+              </li>
+              <li>
+                <a class="link" href="">
+                  <img
+                    src="./images/PhoneReadQRcode.jpg"
+                    alt="Smartphone held in fingers and reading QR code with smartphone."
+                    width="360"
+                    height="300"
+                  />
+                  <h2 class="fontshthre">Cashless Payment</h2>
+                  <p class="p-font">Marketing</p>
+                </a>
+              </li>
+              <li>
+                <a class="link" href="">
+                  <img
+                    src="./images/Computerandsmartphonewithdesamefoto.jpg"
+                    alt="On the laptop screen and on the smartphone screen there is the same 
+              colorful image with the words - return to normalcy."
+                    width="360"
+                    height="300"
+                  />
+                  <h2 class="fontshthre">Meditation App</h2>
+                  <p class="p-font">App</p>
+                </a>
+              </li>
+              <li>
+                <a class="link" href="">
+                  <img
+                    src="./images/cocpitincar.jpg"
+                    alt="Cockpit in the car. Smartphone in the holder with staking turned on."
+                    width="360"
+                    height="300"
+                  />
+                  <h2 class="fontshthre">Taxi Service</h2>
+                  <p class="p-font">Marketing</p>
+                </a>
+              </li>
+              <li>
+                <a class="link" href="">
+                  <img
+                    src="./images/destopwithnun.jpg"
+                    alt="Five images with desktop proposals with a moon theme"
+                    width="360"
+                    height="300"
+                  />
+                  <h2 class="fontshthre">Screen Illustrations</h2>
+                  <p class="p-font">Design</p>
+                </a>
+              </li>
+              <li>
+                <a class="link" href="">
+                  <img
+                    src="./images/Womeninorangedress.jpg"
+                    alt="A woman in a yellow sweater, gray hat and glasses looks at the smartphone"
+                    width="360"
+                    height="300"
+                  />
+                  <h2 class="fontshthre">Online Courses</h2>
+                  <p class="p-font">Marketing</p>
+                </a>
+              </li>
+              <li>
+                <a class="link" href="">
+                  <img
+                    src="./images/leaflet.jpg"
+                    alt="Description of home control presented by a woman in a white turtleneck. Control options via smartphone and touch screen are shown."
+                    width="360"
+                    height="300"
+                  />
+                  <h2 class="fontshthre">Instagram Stories Concept</h2>
+                  <p class="p-font">Design</p>
+                </a>
+              </li>
+
+              <li>
+                <a class="link" href="">
+                  <img
+                    src="./images/womenwithbag.jpg"
+                    alt="A woman dressed in gray pants, a gray long sweater and a white blouse carries fruits and vegetables in a white mesh bag."
+                    width="360"
+                    height="300"
+                  />
+                  <h2 class="fontshthre">Organic Food</h2>
+                  <p class="p-font">Web Site</p>
+                </a>
+              </li>
+              <li>
+                <a class="link" href="">
+                  <img
+                    src="./images/cafeewitchmilk.jpg"
+                    alt="The barista pours milk to create a pattern on the surface of the coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <h2 class="fontshthre">Fresh Coffee</h2>
+                  <p class="p-font">Web Site</p>
+                </a>
+              </li>
+            </div>
+          </ul>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="fooster-parameters">
