Add border to card

--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
           <div class="portfolio-card-div">
           <ul class="list">
             <div class="card-wrap-div">
-              <li>
+              <li class="card-wrap-item">
                 <a class="link" href="">
                   <img
                     src="./images/pagesbankapp.jpg"
@@ -96,7 +96,7 @@
                   <p class="p-font">App</p>
                 </a>
               </li>
-              <li>
+              <li class="card-wrap-item">
                 <a class="link" href="">
                   <img
                     src="./images/PhoneReadQRcode.jpg"
@@ -108,7 +108,7 @@
                   <p class="p-font">Marketing</p>
                 </a>
               </li>
-              <li>
+              <li class="card-wrap-item">
                 <a class="link" href="">
                   <img
                     src="./images/Computerandsmartphonewithdesamefoto.jpg"
@@ -121,7 +121,7 @@
                   <p class="p-font">App</p>
                 </a>
               </li>
-              <li>
+              <li class="card-wrap-item">
                 <a class="link" href="">
                   <img
                     src="./images/cocpitincar.jpg"
@@ -133,7 +133,7 @@
                   <p class="p-font">Marketing</p>
                 </a>
               </li>
-              <li>
+              <li class="card-wrap-item">
                 <a class="link" href="">
                   <img
                     src="./images/destopwithnun.jpg"
@@ -145,7 +145,7 @@
                   <p class="p-font">Design</p>
                 </a>
               </li>
-              <li>
+              <li class="card-wrap-item">
                 <a class="link" href="">
                   <img
                     src="./images/Womeninorangedress.jpg"
@@ -157,7 +157,7 @@
                   <p class="p-font">Marketing</p>
                 </a>
               </li>
-              <li>
+              <li class="card-wrap-item">
                 <a class="link" href="">
                   <img
                     src="./images/leaflet.jpg"
@@ -168,7 +168,7 @@
                   <h2 class="fontshthre">Instagram Stories Concept</h2>
                   <p class="p-font">Design</p>
                 </a>
-              </li>
+              </li class="card-wrap-item">
 
               <li>
                 <a class="link" href="">
@@ -182,7 +182,7 @@
                   <p class="p-font">Web Site</p>
                 </a>
               </li>
-              <li>
+              <li class="card-wrap-item">
                 <a class="link" href="">
                   <img
                     src="./images/cafeewitchmilk.jpg"
@@ -193,7 +193,7 @@
                   <h2 class="fontshthre">Fresh Coffee</h2>
                   <p class="p-font">Web Site</p>
                 </a>
-              </li>
+              </li class="card-wrap-item">
             </div>
           </ul>
           </div>
