all css style in index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
       <!-- Section 2-->
       <section>
-        <div class="container all-section">
+        <div class="container">
           <h2 class="fontshtwo">What are we doing</h2>
           <ul class="list list-section2-flex">
             <li>
@@ -142,45 +142,45 @@
         <div class="container all-section">
         <h2 class="fontshtwo">Our Team</h2>
         <ul class="list list-section3-flex">
-          <li class="li-section-team">
+          <li class="li-section-team list-section3-item-flex">
             <img
               src="./images/mark.jpg"
               alt="smiling dark-haired man with beard and mustache in blue shirt"
               width="264"
               height="260"
             />
-            <h3 class="fontshthre">Mark Guerrero</h3>
-            <p class="p-font">Product Designer</p>
+            <h3 class="fontshthre fonts_name_section3">Mark Guerrero</h3>
+            <p class="p-font p-in-sectio3">Product Designer</p>
           </li>
-          <li class="li-section-team">
+          <li class="li-section-team list-section3-item-flex">
             <img
               src="./images/tom.jpg"
               alt="smiling brunette in a blue shirt"
               width="264"
               height="260"
             />
-            <h3 class="fontshthre">Tom Ford</h3>
-            <p class="p-font">Frontend Developer</p>
+            <h3 class="fontshthre fonts_name_section3">Tom Ford</h3>
+            <p class="p-font p-in-sectio3">Frontend Developer</p>
           </li>
-          <li class="li-section-team">
+          <li class="li-section-team list-section3-item-flex">
             <img
               src="./images/camila.jpg"
               alt="brunette with long hair falling to her shoulders in a pink sweater"
               width="264"
               height="260"
             />
-            <h3 class="fontshthre">Camila Garcia</h3>
-            <p class="p-font">Marketing</p>
+            <h3 class="fontshthre fonts_name_section3">Camila Garcia</h3>
+            <p class="p-font p-in-sectio3">Marketing</p>
           </li>
-          <li class="li-section-team">
+          <li class="li-section-team list-section3-item-flex">
             <img
               src="./images/daniel.jpg"
               alt="a dark-haired man with facial hair in a gray T-shirt"
               width="264"
               height="260"
             />
-            <h3 class="fontshthre">Daniel Wilson</h3>
-            <p class="p-font">UI Designer</p>
+            <h3 class="fontshthre fonts_name_section3">Daniel Wilson</h3>
+            <p class="p-font p-in-sectio3">UI Designer</p>
           </li>
         </ul>
         </div>
@@ -188,13 +188,15 @@
     </main>
     <footer class="fooster-parameters">
       <!--LOGO-->
+      <div class="container all-section">
       <a class="logo link" href="./index.html"
         >WEB<span class="logo-studio-fooster">Studio</span></a
       >
       <p class="p-font-fooster">
-        Increase the flow of customers and sales for your business with digital
+        Increase the flow of customers and<br/> sales for your business with digital<br/>
         marketing & growth solutions.
       </p>
+      </div>
     </footer>
   </body>
 </html>
