--- a/portfolio.html
+++ b/portfolio.html
@@ -21,43 +21,46 @@
   </head>
   <body>
     <header>
-      <nav>
-        <!--LOGO-->
-        <a class="logo link" href="./index.html"
-          >WEB<span class="logo-studio-header">Studio</span></a
-        >
+      <div class="container all-section header-div">
+        <nav class="navi-div">
+          <!--LOGO-->
+          <a class="logo link" href="./index.html"
+            >WEB<span class="logo-studio-header">Studio</span></a
+          >
 
-        <!--navigation menu-->
+          <!--navigation menu-->
 
-        <ul class="list">
-          <li><a class="list-font link" href="./index.html">Studio</a></li>
-          <li>
-            <a class="list-font link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="list-font link" href="">Contacts</a></li>
-        </ul>
-      </nav>
+          <ul class="list menu-header-div">
+            <li><a class="list-font link" href="./index.html">Studio</a></li>
+            <li>
+              <a class="list-font link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li><a class="list-font link" href="">Contacts</a></li>
+          </ul>
+        </nav>
 
-      <!--Contact-->
-      <address class="adress-list">
-        <ul class="list">
-          <li>
-            <a class="link-font link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link-font link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <!--Contact-->
+        <address class="adress-list">
+          <ul class="list address-flex">
+            <li>
+              <a class="link-font link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link-font link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="portfolio-filters">
-        <h1 class="fontshone">Images</h1>
-        <ul class="list">
+        <div class="container all-section">
+        <h1 class="fontshone visually-hidden">Images</h1>
+        <ul class="list filters-flex">
           <li><button class="filters-buttons" type="button">All</button></li>
           <li>
             <button class="filters-buttons" type="button">Web Site</button>
@@ -182,17 +185,21 @@
             </a>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <footer class="fooster-parameters">
       <!--LOGO-->
-      <a class="logo link" href="./index.html"
-        >WEB<span class="logo-studio-fooster">Studio</span></a
-      >
-      <p class="p-font-fooster">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container all-section">
+        <a class="logo link" href="./index.html"
+          >WEB<span class="logo-studio-fooster">Studio</span></a
+        >
+        <p class="p-font-fooster">
+          Increase the flow of customers and<br />
+          sales for your business with digital<br />
+          marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
