change in section hero

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main>
       <!-- hero image -->
       <section class="section-hero">
-        <div class="container all-section">
+        <div class="container ">
           <h1 class="fontshone">Effective Solutions<br />for Your Business</h1>
           <button class="button button-position" type="button">
             Order Service
