chenge in section 1

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main>
       <!-- hero image -->
       <section class="section-hero">
-        <div class="container ">
+        <div class="container">
           <h1 class="fontshone">Effective Solutions<br />for Your Business</h1>
           <button class="button button-position" type="button">
             Order Service
@@ -70,7 +70,7 @@
       <!-- Section 1-->
       <section class="section-what-we-use">
         <div class="container all-section">
-          <h2 class="fontshtwo visually-hidden">What we use</h2>
+          <h2 class="visually-hidden">What we use</h2>
           <ul class="list list-section1-flex">
             <li class="li-what-we-use">
               <h3 class="fontshthre">Strategy</h3>
