--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
       </section>
 
-      <section class="all-section">
+      <section class="all-section team-section">
         <div class="container">
           <h2 class="fontshtwo">Our Team</h2>
           <ul class="team-gallery-grid flex-grid">
